Issue #5406 - Admin navigation drop-down alignment fix. (modern dark)

--- a/e107_themes/bootstrap3/css/modern-dark.css
+++ b/e107_themes/bootstrap3/css/modern-dark.css
@@ -401,27 +401,13 @@ pre{display:block;padding:9.5px;margin:0 0 10px;font-size:13px;word-break:break-
 pre code{padding:0;font-size:inherit;color:inherit;white-space:pre-wrap;background-color:transparent;border-radius:0}
 .container,.container-fluid{padding-left:15px;padding-right:15px}
 .pre-scrollable{overflow-y:scroll}
-
-@media (min-width: 768px) {
-    .container {
-        width: 750px
+@media (min-width:768px){.container{width:750px}
     }
-    .row{margin-left:-15px;margin-right:-15px}
+@media (min-width:992px){.container{width:970px}
 }
-
-@media (min-width: 992px) {
-    .container {
-        width: 970px
+@media (min-width:1200px){.container{width:1170px}
     }
-}
-
-@media (min-width: 1200px) {
-
-    .container {
-        width: 1170px
-    }
-}
-
+.row{margin-left:-15px;margin-right:-15px}
 .col-lg-1,.col-lg-10,.col-lg-11,.col-lg-12,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-md-1,.col-md-10,.col-md-11,.col-md-12,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-sm-1,.col-sm-10,.col-sm-11,.col-sm-12,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{position:relative;min-height:1px;padding-left:15px;padding-right:15px}
 .col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{float:left}
 .col-xs-12{width:100%}
@@ -842,7 +828,8 @@ tbody.collapse.in{display:table-row-group}
 .pull-right>.dropdown-menu{right:0;left:auto}
 .dropup .caret,.navbar-fixed-bottom .dropdown .caret{border-top:0;border-bottom:4px dashed;border-bottom:4px solid\9;content:""}
 .dropup .dropdown-menu,.navbar-fixed-bottom .dropdown .dropdown-menu{top:auto;bottom:100%;margin-bottom:2px}
-@media (min-width:768px){
+@media (min-width:768px){.navbar-right .dropdown-menu{left:auto;right:0}
+.navbar-right .dropdown-menu-left{left:0;right:auto}
 }
 .btn-group,.btn-group-vertical{position:relative;display:inline-block;vertical-align:middle}
 .btn-group-vertical>.btn,.btn-group>.btn{position:relative;float:left}
@@ -1009,9 +996,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
 @media (min-width:768px){.navbar-text{float:left;margin-left:15px;margin-right:15px}
 .navbar-left{float:left!important}
 .navbar-right{float:right!important;margin-right:-15px}
-    /*
         .navbar-right~.navbar-right{margin-right:0}
-       */
 }
 .navbar-default{background-color:#212121;border-color:#101010}
 .navbar-default .navbar-brand{color:#c6c6c6}
